# iris

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  alembic.ini  justfile  pyproject.toml  tsconfig.json
.cursor/commands/: speckit.plan.md
.cursor/rules/: specify-rules.mdc
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-feature-branch.yml  ci-post-merge.yml  ci-pr-main.yml  codeql.yml
.specify/scripts/powershell/: create-new-feature.ps1  update-agent-context.ps1
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/cli/: commands.md  reference.md  user-guide.md
docs/database/: api.md  migrations.md  schema.md
docs/development/: MANUAL_SETUP_REQUIRED.md  branch-protection-setup.md  ci-setup.md  ci-workflow-diagram.md  parallel-execution-guide.md  pre-commit-setup.md  validation-checklist.md
docs/tools/: textual.md
planning/: CONSTITUTION.md  PRD.md  ROADMAP.md  SPRINTS.md  high_level_todos.md  workflow.md
planning/original/: ARCHITECTURE.md  CI_PRE_COMMIT.md  FEATURES.md  PRD.md  PROJECT_STRUCTURE.md  ROADMAP.md  SPRINTS.md  high_level_todos.md  iris_tech_stack_mcp.md
scripts/: db-init.ps1  db-reset.ps1  safety-policy-check.py
specs/001-ci-precommit-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ci-precommit-setup/checklists/: requirements.md
specs/001-ci-precommit-setup/contracts/: README.md
specs/002-database-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-database-setup/checklists/: comprehensive.md  requirements.md
specs/002-database-setup/contracts/: database-api.yaml
specs/002-dev-environment-setup/: IMPLEMENTATION-STATUS.md  PIVOT-NOTES.md  README.md  SECURITY-IMPROVEMENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dev-environment-setup/checklists/: requirements.md  security-auth.md
specs/002-dev-environment-setup/contracts/: README.md  api-spec.yaml
src/iris/: ARCHITECTURE-DECISION.md  __init__.py  main_with_di.py
src/iris/api/: __init__.py  health.py  main.py
src/iris/api/middleware/: __init__.py
src/iris/api/routes/: __init__.py  ideas.py  notes.py  projects.py  projects_refactored_example.py  reminders.py  tasks.py
src/iris/api/services/: __init__.py
src/iris/auth/: __init__.py  dependencies.py  jwt.py
src/iris/cli/commands/: __init__.py  db.py  db_with_di.py
src/iris/cli/output/: __init__.py  display.py
src/iris/cli/utils/: __init__.py
src/iris/config/: __init__.py  settings.py
src/iris/core/: application.py  container.py
src/iris/core/config/: __init__.py  logging_config.py  settings.py
src/iris/core/database/: connection.py  models.py  monitoring.py  services.py
src/iris/core/utils/: __init__.py  error_handler.py  exceptions.py  logging.py
src/iris/database/: __init__.py  supabase.py
src/iris/database/migrations/: 001_initial_schema.sql
src/iris/mcp/: FASTAPI_FASTMCP_INTEGRATION.md  server.py
src/iris/models/: __init__.py  base.py  idea.py  note.py  project.py  reminder.py  task.py
src/iris/services/: SERVICE_LAYER_PATTERN.md  __init__.py  project_service.py
src/iris/tui/screens/: __init__.py
src/iris/tui/utils/: __init__.py
src/iris/tui/widgets/: __init__.py
src/iris/utils/: __init__.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_dependency_injection_example.py  test_placeholder.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py  test_database_integration.py  test_environment_configuration.py  test_health_monitoring_integration.py  test_schema_integration.py
tests/unit/: __init__.py  test_cli_commands.py  test_config.py  test_data_validation.py  test_database_connection.py  test_health_monitoring.py  test_model_crud.py  test_models.py
